--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "static-site",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,5 +9,15 @@
   "license": "ISC",
   "dependencies": {
     "inquirer": "^6.5.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rc9525/Pro-readme.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/rc9525/Pro-readme/issues"
+  },
+  "homepage": "https://github.com/rc9525/Pro-readme#readme",
+  "description": ""
 }
